[package]
name = "tu"
description = "TimeUP!"
version = "0.1.0"
authors = ["Julio Biason <julio.biason@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
dirs = "4.0"
env_logger = "0.9"
log = "*"
serde = "*"
serde_derive = "*"
toml = "0.5"
uuid = { version = "0.8", features = ["v4"] }
